--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Release
         run: |
           gh release create ${{ github.ref_name }} \
-            leo-${{ github.ref_name }}-amd64.tar.gz leo-${{ github.ref_name }}-arm.tar.gz \
+            leo-${{ github.ref_name }}-amd64.tar.gz leo-${{ github.ref_name }}-arm64.tar.gz \
             --title ${{ github.ref_name }} \
             --generate-notes
         env:
