--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,8 +20,8 @@ jobs:
           go-version: 1.21.x
       - name: Build
         run: |
-          ARCH=amd64 make release
-          ARCH=arm64 make release
+          ARCH=amd64 make tarball
+          ARCH=arm64 make tarball
         env:
           VERSION: ${{ github.ref_name }}
       - name: Release
